<resources>
    <string name="app_name">Music Bajao</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Welcome Splash Screen-->
    <string name="welcome_splash_logo">Logo</string>

    <!-- Login Screen -->
    <string name="login">Login</string>
    <string name="sign_up_using">Or Sign Up Using</string>
    <string name="signup">SIGN UP</string>
    <string name="username">Username</string>
    <string name="type_username">Type your username</string>
    <string name="password">Password</string>
    <string name="type_password">Type your password</string>
    <string name="firstname">Firstname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="song_logo">Song Logo</string>
    <string name="artist">Artist</string>
    <string name="song">Song</string>
    <string name="thanks_for_signing_up">Thanks for signing up!!</string>
    <string name="enjoy_your_favourite_music">Enjoy your favourite music</string>
    <string name="next">next</string>
    <string name="change_profile">Change Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="textview">TextView</string>
    <string name="play_pause">play_pause</string>
    <string name="previous">previous</string>
    <string name="song_time">00:00</string>
    <string name="downloads">Downloads</string>
    <string name="profile_successfully_updated">Profile Successfully updated</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_connection_fragment">No Internet Connection</string>

    <!-- Signup -->

</resources>