<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.MusicPlayerActivity"
        android:background="@color/theme_color">

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="30sp"
            android:textColor="@color/white"

            android:padding="10dp"
            android:layout_marginTop="60dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/music_image_logo"
             />

        <ImageView
            android:id="@+id/music_image_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/music_logo"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/song_logo"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/songName"/>

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:src="@drawable/ic_play_button_back_foreground"
            android:background="@color/theme_color"

            android:contentDescription="@string/play_pause"

            app:layout_constraintTop_toBottomOf="@id/music_image_logo"
            app:layout_constraintRight_toLeftOf="@id/nextBtn"
            app:layout_constraintLeft_toRightOf="@id/prevBtn"
            app:layout_constraintBottom_toTopOf="@id/seekBar"
            />

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_prev_music_foreground"
            android:background="@color/theme_color"
            android:contentDescription="@string/previous"
            app:layout_constraintBottom_toBottomOf="@id/playBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/playBtn"
            app:layout_constraintTop_toTopOf="@id/playBtn" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_next_music_foreground"
            android:background="@color/theme_color"
            android:contentDescription="@string/next"
            app:layout_constraintBottom_toBottomOf="@id/playBtn"
            app:layout_constraintLeft_toRightOf="@id/playBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/playBtn" />

        <TextView
            android:id="@+id/startPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_time"
            android:textColor="@color/white"


            android:layout_marginStart="35dp"
            app:layout_constraintBottom_toTopOf="@id/seekBar"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/songEndPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_time"
            android:textColor="@color/white"

            android:layout_marginEnd="35dp"
            app:layout_constraintBottom_toTopOf="@id/seekBar"
            app:layout_constraintRight_toRightOf="parent"/>
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_marginTop="40dp"
            android:progressTint="@color/white"
            android:progressBackgroundTint="#575757"
            app:layout_constraintTop_toBottomOf="@id/playBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>