<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#575757"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/songIcon"
                    android:src="@drawable/music_logo"
                    android:contentDescription="@string/song_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="#C6F492" />


                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/songIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/download_btn"
                    android:layout_marginStart="5dp">

                    <TextView
                        android:id="@+id/songName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:textSize="22sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/songArtist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/artist"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/download_btn"
                    android:layout_width="35dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_downloads_icon_foreground"
                    android:contentDescription="@string/downloads"
                    android:visibility="gone"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>